Собачка в модуле 1 добавилась внезапно

--- a/LearnSpas/LearnSpas.csproj
+++ b/LearnSpas/LearnSpas.csproj
@@ -194,5 +194,8 @@
   <ItemGroup>
     <Resource Include="Resources\Icons\Strelka.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\NewBlackDog.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
