--- a/LearnSpas/LearnSpas.csproj
+++ b/LearnSpas/LearnSpas.csproj
@@ -204,5 +204,8 @@
   <ItemGroup>
     <Resource Include="Resources\Images\NewBlackDog.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\kristinka.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
