--- a/LearnSpas/App.config
+++ b/LearnSpas/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="LearnSpasDatabaseEntities" connectionString="metadata=res://*/Models.LearnSpas.csdl|res://*/Models.LearnSpas.ssdl|res://*/Models.LearnSpas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=LearnSpasDatabase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="LearnSpasssEntities" connectionString="metadata=res://*/Models.LearnSpasss.csdl|res://*/Models.LearnSpasss.ssdl|res://*/Models.LearnSpasss.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=LearnSpasss;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
